# python-cookiecutter

./: .pre-commit-config.yaml  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
{{cookiecutter.project_name}}/.github/workflows/: check-links.yaml  release.yaml  test.yaml
{{cookiecutter.project_name}}/docs/source/: conf.py  index.rst
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/util/: log.py  test_log.py
{{cookiecutter.project_name}}/test/: test_log.py
