[metadata]
name = {{cookiecutter.package_name}}
description = {{cookiecutter.description}}
url = {{cookiecutter.url}}
version = file: src/{{cookiecutter.package_name}}/version.txt
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt
python_requires = >=3.7
project_urls =
    Bug Tracker =   {{cookiecutter.url}}/issues
    Documentation = https://{{cookiecutter.package_name}}.readthedocs.io/
    Source Code =   {{cookiecutter.url}}
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
maintainer = {{ cookiecutter.maintainer }}
maintainer_email = {{ cookiecutter.maintainer_email }}

[options]
package_dir=
    =src
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    colorlog

[options.extras_require]
testing =
    pytest
    pytest-coverage

[options.packages.find]
where=src
